# job-hunter

./: .breakpoints  .replit  README.md  app.py  pyproject.toml  requirements.txt  run.py
cyberlink/: __init__.py  cyberlink_careersdb.sql  forms.py  models.py  routes.py
cyberlink/static/: main.js  style (1).css  style.css  style_dashboard.css
cyberlink/templates/: admin_dashboard.html  base.html  home.html  job_post.html  jobitem.html  jobs.html  login.html  nav.html  register.html
database/: user_rows.csv
static/: style.css
templates/: footer.html  home.html  jobitem.html  nav.html
